# SC2025_STT2-OPTARIS

./: .gitignore  README.md  RPi_Server.py  drone.tle  drone1.tle  drone2.tle  initial.tle  lidar_calibration_20250821_113929.csv  mock_lidar_ws.py  package-lock.json  polar_coords.csv  polar_rpi_ws.py  remoteControl.py  server.py  tle_rpi_ws.py
Assurance_Coppies/Firmware/: lidar_calibration_20250818_084209.csv  lidar_calibration_20250818_084300.csv  lidar_calibration_20250818_085309.csv  main.py
Assurance_Coppies/Firmware copy/: coordinate_transfer.py  lidar_calibration_20250818_121119.csv  lidar_calibration_20250818_121913.csv  lidar_calibration_20250818_122250.csv  lidar_calibration_20250818_122435.csv  main.py  zigzag.py
Coding/CodingShit/: calibration  detection_and_scanning_c++
Coding/ComponentsTest/: rpi_full_system_test.py  rpi_test_motor.py  rpi_test_servo.py
Coding/Z_DoNotLook/SatTracker/: CMakeLists.txt
Coding/Z_DoNotLook/SatTracker/include/: SystemCore.h
Coding/Z_DoNotLook/SatTracker/include/control/: LidarManager.h
Coding/Z_DoNotLook/SatTracker/include/tracking/: KalmanFilter.h
FW_DoNotTouchPls/: real_time_tracking_v1
Firmware/: anomaly_check.py  anomaly_detection.py  assurance_scan.py  calibration.py  conic_section.py  constants.py  coordinate_transfer.py  ekf_tracker.py  enhanced_scanning.py  generate_tle.py  initial_sweep.py  kalman_filter.py  lidar_calibration_20250813_115647.json  lidar_calibration_20250813_121134.json  lidar_calibration_20250813_121603.json  lidar_calibration_20250813_122545.csv  lidar_calibration_20250813_122545.json  lidar_calibration_20250813_123512.csv  lidar_calibration_20250813_123512.json  lidar_calibration_20250813_130131.csv  lidar_calibration_20250813_130131.json  lidar_calibration_20250813_132850.csv  lidar_calibration_20250813_132850.json  lidar_calibration_20250813_195740.csv  lidar_calibration_20250813_195740.json  lidar_calibration_20250813_202723.csv  lidar_calibration_20250813_202723.json  lidar_calibration_20250813_203723.csv  lidar_calibration_20250813_203723.json  lidar_calibration_20250813_204731.json  lidar_calibration_20250813_205132.csv  lidar_calibration_20250813_205132.json  lidar_calibration_20250813_211145.csv  lidar_calibration_20250813_212041.csv  lidar_calibration_20250814_101019.csv  lidar_calibration_20250814_194944.csv  lidar_calibration_20250814_195141.csv  lidar_calibration_20250814_200515.csv  lidar_calibration_20250814_200903.csv  lidar_calibration_20250814_201958.csv  (+403 more)
Firmware_Copy/: lidar_calibration_20250816_183700.csv  main.py
Firmware_Gabi/: README.md  calibration.py  constants.py  lidar_calibration_20250816_152212.csv  main.py  move_motors.py  scanning.py
Firmware_Gabi1/: lidar_calibration_20250816_155106.csv  main.py  plotter.py  tracking_config.py  tracking_functions.py
Firmware_Gabi2/: constants.py
Firmware_Siddesh/: conic_section.py  constants.py  lidar_calibration_20250816_194341.csv  main.py
TrackingMadeSimple/: README.md  background_scan.py  data_processing.py  drone_data_20250817_141911.csv  drone_data_20250817_142242.csv  drone_data_20250817_142242.json  drone_session_20250817_142242.json  find_first_position.py  firmware_StpInz.py  lidar_calibration_20250817_141856.csv  lidar_calibration_20250817_142228.csv  track_point_by_point.py
Tracking_WS/: lidar_calibration_20250815_124539.csv  plotter.py  trajectory_prediction.py  websocket_server.py
Tracking_trial 1/: lidar_reader.py
Tracking_trial 2/: move_motors.py
WebSocket_Attempt2/: Win_Client.js  package.json
scripts/: polar_rpi_ws.py  tle_writer.py
src/: drone.tle  index.css  initial.tle  polar_coords.csv  polar_rpi_ws.py
src/Firmware/: main.py  (+8 more)
(+303 files in other folders)
